--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -270,6 +270,28 @@ img{
     margin-bottom: var(--mb-4)
 }
 
+.row {margin: 0 -5px;}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+  
+
+.skill__column{
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+}
+
+.card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
 .skills__data{
     display: flex; 
     justify-content: space-between;
