--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -285,12 +285,6 @@ img{
     padding: 0 10px;
 }
 
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
-  text-align: center;
-  background-color: #f1f1f1;
-}
 
 .skills__data{
     display: flex; 
@@ -340,6 +334,73 @@ img{
 .skills__img{
     border-radius: .5rem
 }
+
+.card{
+    background: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
+    max-width: 400px;
+    display: flex;
+    flex-direction: row;
+    border-radius: 25px;
+    position: relative;
+}
+
+.img-avatar {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    border-radius: 50%;
+    /* border: 6px solid white; */
+    /* background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%); */
+    top: 15px;
+    left: 85px;
+    /* outline: solid; */
+}
+
+.card-text {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+.portada__ruby {
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* change below to various images of technologies known with javascript */
+    background-image: url(https://www.pngitem.com/pimgs/m/12-120179_best-free-ruby-png-ruby-programming-language-logo.png);
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.tech-image{   
+    max-width: 100%;
+    height: auto;
+    display: block;
+    /* border-radius: 50% */
+}
+
+.title-total {
+    padding: 2.5em 1.5em 1.5em 1.5em;
+}
+
+.card .title {
+    padding: 1rem;
+    text-align: right;
+    color: green;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.card .h2 {
+    margin: 0; 
+    padding: 0 1rem
+}
+
+.card .desc {
+    padding: 0.5rem 1rem;
+    font-size: 12px;
+  }
 
 .work__container{
     row-gap: 2rem
