--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -362,7 +362,7 @@ img{
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
-.portada__ruby {
+.portada__ruby{
     width: 100%;
     height: 100%;
     border-top-left-radius: 20px;
@@ -373,11 +373,100 @@ img{
     background-size: cover;
 }
 
+.portada__javascript{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* change below to various images of technologies known with javascript */
+    background-image: url(https://i1.wp.com/blog.canadianwebhosting.com/wp-content/uploads/2018/04/javascript-logo.png?ssl=1);
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.portada__react{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* change below to various images of technologies known with javascript */
+    background-image: url(https://appmasters.io/static/react-47ce6e77f039020ee2e76a10c1e988e9.png);
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.portada__css{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* change below to various images of technologies known with javascript */
+    background-image: url(https://lh3.googleusercontent.com/proxy/PkpUwGvJWpia44bbmiXHZ00D542W_1ktQNctzEGZN_tp3KarWj6BgfXN5le9OXkao7lSd-NN7DBZrtK8auVdkFMpXf0_r6RXogI3rV8);
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.portada__html{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* change below to various images of technologies known with javascript */
+    background-image: url(https://cdn.iconscout.com/icon/free/png-512/html5-10-569380.png);
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.portada__postgresql{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* change below to various images of technologies known with javascript */
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg);
+    background-position: bottom center;
+    background-size: cover;
+}
+
 .tech-image{   
     max-width: 100%;
     height: auto;
     display: block;
     /* border-radius: 50% */
+}
+
+.tech-image__javascript{
+    max-width: 180%;
+    height: auto;
+    display: block;
+    position: absolute; 
+    right: -50px; 
+    top: 16px
+}
+
+.tech-image__react{
+    max-width: 130%;
+    height: auto;
+    display: block;
+    position: absolute; 
+    right: -48px; 
+    bottom: -25px
+}
+
+.tech-image__css{
+    max-width: 135%;
+    height: auto;
+    display: block;
+    position: absolute; 
+    top: 4px; 
+}
+
+.tech-image__html{
+    max-width: 135%;
+    height: auto;
+    display: block;
+    position: absolute; 
+    top: 19px; 
 }
 
 .title-total {
