--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -257,9 +257,13 @@ img{
     border-radius: .5rem
 }
 
-.skills_container{
+.skills__container{
     row-gap: 2rem; 
     text-align: center
+}
+
+.skills__title{
+    text-align: end;
 }
 
 .skills__subtitle{
