--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -373,6 +373,7 @@ img{
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
+
 .portada__ruby{
     width: 100%;
     height: 100%;
@@ -380,6 +381,16 @@ img{
     border-bottom-left-radius: 20px;
     /* change below to various images of technologies known with javascript */
     background-image: url(https://www.pngitem.com/pimgs/m/12-120179_best-free-ruby-png-ruby-programming-language-logo.png);
+    background-position: bottom center;
+    background-size: cover;
+}
+.portada__rails{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* change below to various images of technologies known with javascript */
+    background-image: url(https://avatars.githubusercontent.com/u/4223);
     background-position: bottom center;
     background-size: cover;
 }
@@ -453,6 +464,14 @@ img{
     position: absolute; 
     right: -50px; 
     top: 16px
+}
+
+.tech-image__rails{
+    max-width: 135%;
+    height: auto;
+    display: block;
+    position: absolute; 
+    right: -25px; 
 }
 
 .tech-image__react{
