continuing to change layout

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,6 +113,16 @@ img{
     margin-right: var(--mb-2);
 }
 
+.home-grid{
+    max-width: 1024px;
+    display: grid; 
+    grid-template-columns: 50% 50%;
+    grid-column-gap: 1rem;
+    width: calc(100% - 2rem);
+    margin-left: var(--mb-2);
+    margin-right: var(--mb-2);
+}
+
 .l-header{
     width: 100%;
     position: fixed; 
@@ -642,8 +652,6 @@ img{
         align-self: flex-end
     }
     .home__social{
-        padding-top: 0;
-        padding-bottom: 2.5rem;
         flex-direction: row;
         align-self: flex-end
     }
@@ -657,6 +665,7 @@ img{
     } */
     .home__bio{
         width: 457px;
+        padding: 7rem 0rem 0rem 1rem
     }
     .about__container, .skills_container{
         grid-template-columns: repeat(2,1fr);
