--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -617,13 +617,11 @@ img{
 
 }
 
+/* everything OVER width 768 will have these props */
+/* min-width == OVER px // max-width == UNDER px */
 @media screen and (min-width: 768px){
     body{
         margin: 0
-    }
-    .section{
-        /* padding-top: 4rem; 
-        padding-bottom: 3rem; */
     }
     .home-section{
         padding-top: 4rem; 
@@ -637,7 +635,8 @@ img{
         top: 3rem
     }
     .nav{
-        height: calc(var(--header-height) + 1rem)
+        height: calc(var(--header-height) + 1rem);
+        background-color: red
     }
     .nav__list{
         display: flex;
@@ -708,3 +707,73 @@ img{
         padding-right: 11.5rem;
     }
 }
+
+@media screen and (max-width: 375px){
+    .nav__logo{
+        font-size: .9rem;
+    }
+    .nav__menu{
+        width: 65%;
+        ;
+    }
+    .bd-grid{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .home-grid{
+        max-width: 1024px;
+        display: grid; 
+        grid-template-columns: auto;
+        grid-column-gap: 1rem;
+        width: calc(100% - 2rem);
+        margin-left: var(--mb-2);
+        margin-right: var(--mb-2);
+        background-color: yellowgreen
+    }
+    .home__social{
+        flex-direction: row;
+        align-self: flex-end
+    }
+    .home__social-icon{
+        width: max-content;
+        margin-bottom: var(--mb-2);
+        font-size: 2.5rem;
+        color: var(--second-color);
+        padding: 0rem 1rem 0rem .65rem;
+    }
+    .section-title{
+        position: relative;
+        font-size: 1.5rem;
+        color: var(--first-color);
+        margin-top: var(--mb-2);
+        margin-bottom: var(--mb-4);
+        text-align: center;
+    }
+    .section-title::after{
+        top: 2.4rem
+    }
+    .about__subtitle{
+        text-align: center;
+    }
+    #skills{
+        padding: 14rem 0rem 4rem 0rem;
+    }
+    .card{
+        margin: .5rem 0rem .5rem 0rem;
+    }
+    .contact__subtitle{
+        margin-bottom: var(--mb-3);
+        text-align: center;
+    }
+    .footer__social{
+        display: flex; 
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 1.2rem 0rem 0rem 2rem;
+    }
+    .footer__text{
+        font-size: .9rem;
+    }
+
+}
+
