--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -707,6 +707,7 @@ img{
     }
 }
 
+/* if the browser window is 375px or smaller... */
 @media screen and (max-width: 375px){
     .l-main{
         padding: 0rem 1.2rem 0rem 1.2rem;
@@ -787,6 +788,9 @@ img{
     }
     .footer__text{
         font-size: .9rem;
+    }
+    #footer-divider{
+        visibility: hidden;    
     }
 
 }
