--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,8 +122,9 @@ img{
     grid-template-columns: 50% 50%;
     grid-column-gap: 1rem;
     width: calc(100% - 2rem);
-    margin-left: var(--mb-2);
-    margin-right: var(--mb-2);
+    /* margin-left: var(--mb-2);
+    margin-right: var(--mb-2); */
+    padding: 0rem 0rem 0rem 15rem;
 }
 
 .l-header{
@@ -652,7 +653,7 @@ img{
         color: var(--second-color)
     }
     .home{
-        height: 100vh
+        height: 75vh
     }
     .home__data{
         align-self: flex-end
